plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

version = "${project.minecraft_version}-b${project.build_number}"
group = project.maven_group

base {
	archivesName = project.release_name
}

repositories {
	maven { url 'https://maven.wispforest.io' }
	maven { url 'https://jitpack.io' }
	maven {
		name = 'faststatsReleases'
		url = uri('https://repo.faststats.dev/releases')
	}
	mavenCentral()
}

configurations {
	faststatsRuntime
	faststatsCompatibility
}

configurations.configureEach {
	resolutionStrategy.eachDependency { details ->
	if (details.requested.group == 'io.netty' && details.requested.name == 'netty-codec-http') {
			details.useVersion('4.2.10.Final')
			details.because('CVE-2026-33870')
		}
		if (details.requested.group == 'org.apache.logging.log4j' && details.requested.name == 'log4j-core') {
			details.useVersion('2.25.4')
			details.because('CVE-2026-34478, CVE-2026-34480, CVE-2026-34477')
		}
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	add("modImplementation", "net.fabricmc:fabric-loader:${project.loader_version}")

	add("modImplementation", "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}")
	add("modImplementation", "io.wispforest:owo-lib:${project.owo_version}")
	annotationProcessor "io.wispforest:owo-lib:${project.owo_version}"
	faststatsRuntime "dev.faststats.metrics:fabric:${project.faststats_version}"
	faststatsCompatibility("dev.faststats.metrics:fabric:${project.faststats_compat_version}") {
		transitive = false
	}
	implementation files(configurations.faststatsRuntime)
	implementation files(configurations.faststatsCompatibility)
}

def localTests = file("local-tests.gradle")
if (localTests.exists()) {
	apply from: localTests
}

processResources {
	def modVersion = "b${project.build_number}"
	inputs.property "version", modVersion

	filesMatching("fabric.mod.json") {
		expand "version": modVersion
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from({
		configurations.faststatsRuntime.files.collect { zipTree(it) }.plus(
				configurations.faststatsCompatibility.files.collect { zipTree(it) }
		)
	}) {
		exclude 'META-INF/MANIFEST.MF', 'module-info.class', 'META-INF/*.SF', 'META-INF/*.RSA'
	}

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	repositories {
	}
}
